--- a/Bazis MADI/Teacher.storyboard
+++ b/Bazis MADI/Teacher.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -758,6 +758,9 @@
                                                         <constraint firstAttribute="height" constant="29.333333333333329" id="NY1-1e-CBk"/>
                                                     </constraints>
                                                     <state key="normal" backgroundImage="info.circle" catalog="system"/>
+                                                    <connections>
+                                                        <action selector="infoButtonPress:" destination="k2E-w5-aGE" eventType="touchUpInside" id="9NK-r4-7g8"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <constraints>
@@ -1305,6 +1308,76 @@
             </objects>
             <point key="canvasLocation" x="7070" y="-2211"/>
         </scene>
+        <!--Student Full Info Table View Controller-->
+        <scene sceneID="6GJ-56-pBy">
+            <objects>
+                <tableViewController storyboardIdentifier="studFullInfo" id="8dI-2T-1RP" customClass="StudentFullInfoTableViewController" customModule="МАДИ" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="hdC-ez-84n">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="partInfo" textLabel="REq-SV-jK9" detailTextLabel="JfQ-oh-oEi" style="IBUITableViewCellStyleValue1" id="s36-j4-7pH">
+                                <rect key="frame" x="20" y="55.333332061767578" width="374" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="s36-j4-7pH" id="dEp-Ge-dzs">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="REq-SV-jK9" customClass="Title5LabelUILabel" customModule="МАДИ" customModuleProvider="target">
+                                            <rect key="frame" x="20.000000000000004" y="11.999999999999998" width="33.333333333333336" height="20.333333333333332"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="JfQ-oh-oEi" customClass="Title7LabelUILabel" customModule="МАДИ" customModuleProvider="target">
+                                            <rect key="frame" x="310" y="11.999999999999998" width="44" height="20.333333333333332"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="loadCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="loadCell" rowHeight="96" id="XEU-pn-DFj" userLabel="loadCell">
+                                <rect key="frame" x="20" y="99.333332061767578" width="374" height="96"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XEU-pn-DFj" id="aqr-58-nZT">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="96"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Загрузка данных..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NwM-CW-RCA" userLabel="label" customClass="Title3LabelUILabel" customModule="МАДИ" customModuleProvider="target">
+                                            <rect key="frame" x="20" y="56" width="334" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="BOa-iz-taq">
+                                            <rect key="frame" x="168.66666666666666" y="11" width="37" height="37"/>
+                                        </activityIndicatorView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="NwM-CW-RCA" secondAttribute="trailing" constant="20" id="YUY-G3-Mo6"/>
+                                        <constraint firstItem="BOa-iz-taq" firstAttribute="top" secondItem="aqr-58-nZT" secondAttribute="top" constant="11" id="eAt-Mg-wLG"/>
+                                        <constraint firstItem="BOa-iz-taq" firstAttribute="centerX" secondItem="aqr-58-nZT" secondAttribute="centerX" id="ecc-cT-Egk"/>
+                                        <constraint firstAttribute="bottom" secondItem="NwM-CW-RCA" secondAttribute="bottom" constant="19" id="oe0-O4-dnm"/>
+                                        <constraint firstItem="NwM-CW-RCA" firstAttribute="leading" secondItem="aqr-58-nZT" secondAttribute="leading" constant="20" id="tFW-nx-hZJ"/>
+                                        <constraint firstItem="NwM-CW-RCA" firstAttribute="firstBaseline" secondItem="BOa-iz-taq" secondAttribute="baseline" constant="24.333333333333332" symbolType="layoutAnchor" id="uAq-cl-29N"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8dI-2T-1RP" id="Mt1-SA-D5j"/>
+                            <outlet property="delegate" destination="8dI-2T-1RP" id="q0J-3b-Zlg"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kkq-8i-i3d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6160.8695652173919" y="-1398.2142857142856"/>
+        </scene>
         <!--Student Portfolio Table View Controller-->
         <scene sceneID="JBq-JB-wCm">
             <objects>
@@ -1570,7 +1643,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8UL-Ux-5Nq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6161" y="-1398"/>
+            <point key="canvasLocation" x="7070" y="-1398"/>
         </scene>
         <!--Student Uspev Table View Controller-->
         <scene sceneID="9ep-CQ-ozw">
@@ -1763,7 +1836,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K3d-KQ-Qt9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7142" y="-1398"/>
+            <point key="canvasLocation" x="8049" y="-1398"/>
         </scene>
         <!--Teacher Files View Controller-->
         <scene sceneID="SK8-Tl-M9u">
